# gomoku

./: .gitignore  CMakelists.txt  README.md
Code/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
hello_world/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
